# english

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/ai/: AGENTS.md  pyproject.toml  test_streaming.py
backend/ai/docs/: ai-conversation-storage.md  ai-conversation-storage01.md  architecture.md  composition-and-speak-flow-detailed.md  session-thread-checkpoint.md
backend/ai/src/: main.py
backend/ai/src/config/: config.py
backend/ai/src/db/: main.py  milvus_client.py
backend/ai/src/models/: models.py
backend/ai/src/routers/ai/: route.py  schemas.py
backend/ai/src/routers/ai/composition/: AGENTS.md  checkpoint.py  essay_state.py  history_store.py  workflow.py
backend/ai/src/routers/ai/composition/chains/: error_detector.py  score_grader.py  score_node_out.py  suggestion_provider.py
backend/ai/src/routers/ai/composition/ingestion/: create_essay_rubrics.py  create_sample_essay_connection.py  ielts_essay_rubrics.csv  ielts_essay_rubrics.csv~  ielts_essays_processed_fixed.csv  insert_ielts_sample_essays.py  verify_data.py
backend/ai/src/routers/ai/composition/nodes/: analyze_topic.py  detect_errors.py  generate_suggestions.py  score_essay.py  (+2 more)
backend/ai/src/routers/ai/normal/: history_store.py  state.py  workflow.py
backend/ai/src/routers/ai/speak/: __init__.py  history_store.py  prompt.py  schemas.py  service.py  workflow.py
backend/ai/src/routers/ai/tools/: tavily_tool.py
backend/ai/src/routers/user/: route.py  schemas.py  service.py
backend/ai/src/services/langchain/: cosyVoice.py  embedding.py  llm.py
(+134 files in other folders)
